--- a/Contact Me.html
+++ b/Contact Me.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>My Contact Info</h1>
-    <p>My Address = 199 west 19th st Hamilten bstm</p>
-    <p> My Number 7059301811</p>
+    <p>My Address = Hamilton </p>
+    <p> My Number 7059301000</p>
     <p>My Emill = benjoycesap@gmail.com</p>
     <hr>
     <form action="mailto:benjoycesap@gmail.com" method="post" enctype="text/plain">
