--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Avenil's Open Website</title>
+  <link rel="stylesheet" href="C:\Users\user\Documents\Web development Bootcamp\css\styles.css">
+
 </head>
 
 <body>
-  <table cellspacing="20">
+  <center>
+
+  <table>
     <tr>
       <td><img src="Avenil.png" alt="Avenil's Profile"></td>
       <td>
@@ -18,30 +22,29 @@
     </tr>
 
   </table>
-
   <hr>
   <h3> What Kind Of Video's Avenil Makes </h3>
-  <ul>
-    <li>Gameing</li>
-    <li> Unboxing</li>
-    <li> Review</li>
-    <li>Gameing News</li>
-  </ul>
+
+    <p>Gameing</p>
+    <p> Unboxing</p>
+    <p> Review</p>
+    <p>Gameing News</p>
+
   <hr>
   <h3>Avenil's Hobbies </h3>
-  <ol>
-    <li>Gameing Is Avenil's Favourite Hobbie </li>
-    <li>He Likes Basketball</li>
-    <li>He Loves Making Content For his YouTube And Tiktok Both Are Called Avenil's Ultra World </li>
-  </ol>
+
+    <p>Gameing Is Avenil's Favourite Hobbie </p>
+    <p>He Likes Basketball</p>
+    <p>He Loves Making Content For his YouTube And Tiktok Both Are Called Avenil's Ultra World </p>
+
   <hr>
-<h1><a href="Contact Me.html">Contact Me</a></h1>
+  <h1><a href="Contact Me.html">Contact Me</a></h1>
   <hr>
   <h3>How It Started</h3>
 
-<p><em><strong>Avenil Ben Chundru was born on June 13th, 2011 in India He came to Canada in 2017 He Started his Channel in Late 2019</em></strong></p>
-<p><em><strong>In 2020 he got a PS4 as his birthday gift from one of his uncles and started making gaming videos on it</strong></p>
-<p><em><strong>That was the time he first played Fortnite and made a YouTube video on it he did not know it then but it was going to become his favourite game it was chapter 2 Season 3</em></strong></p>
+  <p><em><strong>Avenil Ben Chundru was born on June 13th, 2011 in India He came to Canada in 2017 He Started his Channel in Late 2019</em></strong></p>
+  <p><em><strong>In 2020 he got a PS4 as his birthday gift from one of his uncles and started making gaming videos on it</strong></p>
+  <p><em><strong>That was the time he first played Fortnite and made a YouTube video on it he did not know it then but it was going to become his favourite game it was chapter 2 Season 3</em></strong></p>
   <p><em><strong>only five Seasons Later chapter 2 Season 8 he got the battle pass his First purchase on Fortnite after that he knew Fortnite was his favourite game</em></strong></p>
 
 
@@ -90,9 +93,10 @@
     </table>
 
     <hr>
-    <ol>
+
       <h3>Social media</h3>
-      <li> Avenil's Ultra World <a href="https://www.tiktok.com/@avenilsultraworld">Ticktok</a> </li>
-      <li> Avenil's Ultra World <a href="https://www.youtube.com/channel/UCRvuqy-UR6LsU349d_4KR6A">YouTube</a></li>
-    </ol>
+      <p> Avenil's Ultra World <a href="https://www.tiktok.com/@avenilsultraworld">Ticktok</a> </p>
+      <p> Avenil's Ultra World <a href="https://www.youtube.com/channel/UCRvuqy-UR6LsU349d_4KR6A">YouTube</a></p>
+
+      </center>
 </body>
