--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Avenil's Open Website</title>
-  <link rel="stylesheet" type="text/css" href="https://avenil.github.io/styles.css">
+  <link rel="stylesheet" type="text/css" href="https://Avenil.github.io/styles.css">
 
 </head>
 
